<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_btn">SPOTIFY STREAMER</string>
    <string name="scores_btn">SCORES APP</string>
    <string name="library_btn">LIBRARY APP</string>
    <string name="buildbigger_btn">BUILD IT BIGGER</string>
    <string name="bacon_btn">BACON READER</string>
    <string name="capstone_btn">CAPSTONE: MY OWN APP</string>
</resources>
