<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:textColor="@android:color/white"
        android:text="@string/spotify_btn"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="52dp"
        android:layout_alignStart="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:onClick="displayMessage1"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:textColor="@android:color/white"
        android:text="@string/scores_btn"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:onClick="displayMessage2"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/library_btn"
        android:textColor="@android:color/white"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:onClick="displayMessage3"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/buildbigger_btn"
        android:textColor="@android:color/white"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:onClick="displayMessage4"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/bacon_btn"
        android:textColor="@android:color/white"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:onClick="displayMessage5"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#B03060"
        android:text="@string/capstone_btn"
        android:textColor="@android:color/white"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:onClick="displayMessage6"/>

</RelativeLayout>
